crates/wdl-engine/tests/tasks/memory_limit/error.txt
error: task requires at least 20000 GiB of memory
   ┌─ tests/tasks/memory_limit/source.wdl:17:5
   │
17 │     memory: "20000 GiB"
   │     ^^^^^^^^^^^^^^^^^^^ this requirement exceeds the available memory

